--- a/backend/apps/warehouse/templates/cheque/cheque_list.html
+++ b/backend/apps/warehouse/templates/cheque/cheque_list.html
@@ -69,7 +69,7 @@
                                         <thead>
                                         <tr>
                                             <th style="width: 10px">#</th>
-                                            <th>Серия Наклодная</th>
+                                            <th>Номер чека</th>
                                             <th>Пациент</th>
                                             <th>Сумма</th>
                                             <th>Персонал</th>
