--- a/backend/apps/warehouse/templates/manual/main_screen.html
+++ b/backend/apps/warehouse/templates/manual/main_screen.html
@@ -35,7 +35,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <div class="row">
                     <div class="col-lg-3 col-6">
                         <!-- small box -->
-                        <div class="small-box bg-info">
+                        <div class="small-box bg-primary">
                             <div class="inner">
                                 <h3>Филиалы</h3>
 
@@ -50,30 +50,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <!-- ./col -->
                     <div class="col-lg-3 col-6">
                         <!-- small box -->
-                        <div class="small-box bg-success">
+                        <div class="small-box bg-secondary">
                             <div class="inner">
-                                <h3>Реестр прихода</h3>
+                                <h3>Поставщики</h3>
 
-                                <p>Bounce Rate</p>
+                                <p>150</p>
                             </div>
                             <div class="icon">
-                                <i class="ion ion-stats-bars"></i>
-                            </div>
-                            <a href="{% url "warehouse_v2:mp-income" %}" class="small-box-footer">Подробнее <i
-                                    class="fas fa-arrow-circle-right"></i></a>
-                        </div>
-                    </div>
-                    <!-- ./col -->
-                    <div class="col-lg-3 col-6">
-                        <!-- small box -->
-                        <div class="small-box bg-warning">
-                            <div class="inner">
-                                <h3>Реестр расхода</h3>
-
-                                <p>User Registrations</p>
-                            </div>
-                            <div class="icon">
-                                <i class="ion ion-person-add"></i>
+                                <i class="ion ion-bag"></i>
                             </div>
                             <a href="#" class="small-box-footer">Подробнее <i class="fas fa-arrow-circle-right"></i></a>
                         </div>
@@ -81,16 +65,16 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <!-- ./col -->
                     <div class="col-lg-3 col-6">
                         <!-- small box -->
-                        <div class="small-box bg-secondary">
+                        <div class="small-box bg-success">
                             <div class="inner">
-                                <h3>Реестр лекарств</h3>
+                                <h3>Лекарств</h3>
 
-                                <p>Unique Visitors</p>
+                                <p>Лекарств</p>
                             </div>
                             <div class="icon">
-                                <i class="ion ion-pie-graph"></i>
+                                <i class="ion ion-stats-bars"></i>
                             </div>
-                            <a href="{% url "warehouse_v2:items-list" %}" class="small-box-footer">Подробнее <i
+                            <a href="#" class="small-box-footer">Подробнее <i
                                     class="fas fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
@@ -98,16 +82,16 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <!-- ./col -->
                     <div class="col-lg-3 col-6">
                         <!-- small box -->
-                        <div class="small-box bg-secondary">
+                        <div class="small-box bg-warning">
                             <div class="inner">
-                                <h3>Перемещение</h3>
+                                <h3>Персонал</h3>
 
-                                <p>Unique Visitors</p>
+                                <p>Персонал</p>
                             </div>
                             <div class="icon">
-                                <i class="ion ion-pie-graph"></i>
+                                <i class="ion ion-stats-bars"></i>
                             </div>
-                            <a href="{% url 'warehouse_v2:transfers' %}" class="small-box-footer">Подробнее <i
+                            <a href="#" class="small-box-footer">Подробнее <i
                                     class="fas fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
@@ -117,29 +101,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <!-- small box -->
                         <div class="small-box bg-danger">
                             <div class="inner">
-                                <h3>Чеки</h3>
-                                <p>Unique Visitors</p>
+                                <h3>Списание</h3>
+
+                                <p>-***-</p>
                             </div>
                             <div class="icon">
-                                <i class="ion ion-pie-graph"></i>
+                                <i class="ion ion-stats-bars"></i>
                             </div>
-                            <a href="{% url 'warehouse_v2:cheque' %}" class="small-box-footer">Подробнее <i
-                                    class="fas fa-arrow-circle-right"></i></a>
-                        </div>
-                    </div>
-                    <!-- ./col -->
-                     <!-- ./col -->
-                    <div class="col-lg-3 col-6">
-                        <!-- small box -->
-                        <div class="small-box bg-primary">
-                            <div class="inner">
-                                <h3>Справочник</h3>
-                                <p> 0 </p>
-                            </div>
-                            <div class="icon">
-                                <i class="ion ion-pie-graph"></i>
-                            </div>
-                            <a href="{% url 'warehouse_manual:main_screen' %}" class="small-box-footer">Подробнее <i
+                            <a href="#" class="small-box-footer">Подробнее <i
                                     class="fas fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
