--- a/backend/apps/warehouse/templates/transfers/transfers_list.html
+++ b/backend/apps/warehouse/templates/transfers/transfers_list.html
@@ -25,44 +25,7 @@
     <div class="wrapper">
 
         <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
-            <div class="container">
-                <a href="{% url "warehouse_v2:mainscreen" %}" class="navbar-brand">
-                    <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="AdminLTE Logo"
-                         class="brand-image img" style="opacity: .8">
-                    <span class="brand-text font-weight-light"></span>
-                </a>
-
-                <button class="navbar-toggler order-1" type="button" data-toggle="collapse"
-                        data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse order-3" id="navbarCollapse">
-                    <!-- Left navbar links -->
-                    <ul class="navbar-nav">
-
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Филиалы</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'warehouse_v2:mp-income' %}" class="nav-link">Реестр прихода</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Реестр расхода</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'warehouse_v2:items-list' %}" class="nav-link">Реестр лекарств</a>
-                        </li>
-
-                    </ul>
-
-                    <!-- SEARCH FORM -->
-                </div>
-                <!-- SEARCH FORM -->
-            </div>
-        </nav>
+        {% include 'snippets/navbar.html' %}
         <!-- Right navbar links -->
     </div>
     <!-- /.navbar -->
@@ -195,16 +158,7 @@
     <!-- /.control-sidebar -->
 
     <!-- Main Footer -->
-    <footer class="main-footer">
-        <!-- To the right -->
-        <div class="float-right d-none d-sm-inline">
-            Keep your health!
-        </div>
-        <!-- Default to the left -->
-        <strong>Copyright &copy; 2014-2024 <a href="https://adminlte.io">Hayat Medical Centre</a>.</strong> All
-        rights reserved.
-    </footer>
-    </div>
+    {% include 'snippets/footer.html' %}
     <!-- ./wrapper -->
 
     <!-- REQUIRED SCRIPTS -->
