--- a/backend/apps/warehouse/templates/main_point/mainsreen.html
+++ b/backend/apps/warehouse/templates/main_point/mainsreen.html
@@ -75,7 +75,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             <div class="icon">
                                 <i class="ion ion-person-add"></i>
                             </div>
-                            <a href="#" class="small-box-footer">Подробнее <i class="fas fa-arrow-circle-right"></i></a>
+                            <a href="{% url 'warehouse_v2:expanses' %}" class="small-box-footer">Подробнее <i class="fas fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
                     <!-- ./col -->
