--- a/backend/apps/warehouse/templates/snippets/navbar.html
+++ b/backend/apps/warehouse/templates/snippets/navbar.html
@@ -41,6 +41,36 @@
     </div>
 
     <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+            <a class="nav-link" data-toggle="dropdown" href="#">
+                <i class="far fa-comments"></i>
+                <span class="badge badge-danger navbar-badge">{{ notifications|length }}</span>
+            </a>
+            <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+                {% for note in notifications %}
+                    <a href="#" class="dropdown-item">
+                        <!-- Message Start -->
+                        <div class="media">
+                            <div class="media-body">
+                                <h3 class="dropdown-item-title">
+                                    Brad Diesel
+                                    <span class="float-right text-sm text-danger"><i class="fas fa-star"></i></span>
+                                </h3>
+                                <p class="text-sm">Call me whenever you can...</p>
+                                <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
+                            </div>
+                        </div>
+                        <!-- Message End -->
+                    </a>
+                    <div class="dropdown-divider"></div>
+                {% endfor %}
+                {% if notifications %}
+                    <a href="#" class="dropdown-item dropdown-footer">Просмотреть все сообщении</a>
+                {% else %}
+                    <a href="#" class="dropdown-item dropdown-footer">Нет сообщений</a>
+                {% endif %}
+            </div>
+        </li>
         <!-- Navbar Search -->
         <li class="nav-item dropdown user-menu">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
