--- a/backend/apps/warehouse/templates/main_screen/branches_main_screen.html
+++ b/backend/apps/warehouse/templates/main_screen/branches_main_screen.html
@@ -23,7 +23,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <div class="wrapper">
 
     <!-- Navbar -->
-    {% include 'snippets/navbar.html' %}
+    {% include 'snippets/navbar_min.html' %}
     <!-- /.navbar -->
 
     <div class="content-wrapper">
@@ -37,9 +37,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <!-- small box -->
                         <div class="small-box bg-info">
                             <div class="inner">
-                                <h3>Филиалы</h3>
+                                <h3>Филиал</h3>
 
-                                <p>150</p>
+                                <p>{{ store_point.store_point.name }}</p>
                             </div>
                             <div class="icon">
                                 <i class="ion ion-bag"></i>
@@ -54,12 +54,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             <div class="inner">
                                 <h3>Реестр прихода</h3>
 
-                                <p>Bounce Rate</p>
+                                <p>Список</p>
                             </div>
                             <div class="icon">
                                 <i class="ion ion-stats-bars"></i>
                             </div>
-                            <a href="{% url "warehouse_v2:mp-income" %}" class="small-box-footer">Подробнее <i
+                            <a href="{% url "warehouse_branch:income-list" %}" class="small-box-footer">Подробнее <i
                                     class="fas fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
@@ -85,7 +85,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             <div class="inner">
                                 <h3>Реестр лекарств</h3>
 
-                                <p>Unique Visitors</p>
+                                <p>Список</p>
                             </div>
                             <div class="icon">
                                 <i class="ion ion-pie-graph"></i>
@@ -102,7 +102,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             <div class="inner">
                                 <h3>Перемещение</h3>
 
-                                <p>Unique Visitors</p>
+                                <p>Список</p>
                             </div>
                             <div class="icon">
                                 <i class="ion ion-pie-graph"></i>
@@ -118,12 +118,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <div class="small-box bg-danger">
                             <div class="inner">
                                 <h3>Чеки</h3>
-                                <p>Unique Visitors</p>
+                                <p>Список</p>
                             </div>
                             <div class="icon">
                                 <i class="ion ion-pie-graph"></i>
                             </div>
-                            <a href="{% url 'warehouse_v2:cheque' %}" class="small-box-footer">Подробнее <i
+                            <a href="#" class="small-box-footer">Подробнее <i
                                     class="fas fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
@@ -158,7 +158,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- /.control-sidebar -->
 
     <!-- Main Footer -->
-    {% include 'snippets/footer.html' %}
+    {% include 'snippets/footer_min.html' %}
 </div>
 <!-- ./wrapper -->
 <div class="modal fade" id="modal-danger" style="display: none;" aria-hidden="true">
