--- a/backend/apps/warehouse/templates/main_screen/main_screen.html
+++ b/backend/apps/warehouse/templates/main_screen/main_screen.html
@@ -39,7 +39,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             <div class="inner">
                                 <h3>Филиалы</h3>
 
-                                <p>150</p>
+                                <p>{{ store_point.store_point.name }}</p>
                             </div>
                             <div class="icon">
                                 <i class="ion ion-bag"></i>
