--- a/backend/apps/warehouse/templates/expanses/expanse_create.html
+++ b/backend/apps/warehouse/templates/expanses/expanse_create.html
@@ -41,7 +41,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <!-- main form start --- in our case product form -->
                     <div class="card">
                         <div class="card-header card-header-secondary">
-                            <h4 class="card-title">Детали Прихода</h4>
+                            <h4 class="card-title">Детали Расхода</h4>
                         </div>
                         {% for field in form %}
                             {#                            <div class="form-group card-body">#}
