--- a/backend/apps/warehouse/templates/income/income_list.html
+++ b/backend/apps/warehouse/templates/income/income_list.html
@@ -75,6 +75,8 @@
                                             <th>Сумма</th>
                                             <th>Пользователь</th>
                                             <th>Дата ввода</th>
+                                            <th>Статус</th>
+                                            <th>Действие</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -90,7 +92,27 @@
                                                 <td>{{ i.bill_amount }}</td>
                                                 <td>{{ i.created_by.full_name }}</td>
                                                 <td>{{ i.modified_at }}</td>
-                                                <td><span class="badge bg-danger">55%</span></td>
+                                                {% if i.state == 'в ожидании' %}
+                                                    <td><span class="badge bg-warning">{{ i.state }}</span></td>
+                                                    <td>
+                                                        <a class="badge-pill"
+                                                           href="{% url 'warehouse_v2:income-update' i.pk %}">
+                                                            <i class="fas fa-edit"></i>
+                                                        </a>
+                                                    </td>
+                                                {% elif i.state == 'принято' %}
+                                                    <td><span class="badge bg-success">{{ i.state }}</span></td>
+                                                    <td>
+                                                        <i class="fas fa-edit"></i>
+                                                        </a>
+                                                    </td>
+                                                {% elif i.state == 'отказоно' %}
+                                                    <td><span class="badge bg-danger">{{ i.state }}</span></td>
+                                                    <td>
+                                                        <i class="fas fa-edit"></i>
+                                                        </a>
+                                                    </td>
+                                                {% endif %}
                                             </tr>
                                         {% endfor %}
 
