--- a/backend/apps/warehouse/templates/items/items_list.html
+++ b/backend/apps/warehouse/templates/items/items_list.html
@@ -25,86 +25,7 @@
     <div class="wrapper">
 
         <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
-            <div class="container">
-                <a href="{% url "warehouse_v2:mainscreen" %}" class="navbar-brand">
-                    <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="AdminLTE Logo"
-                         class="brand-image img" style="opacity: .8">
-                    <span class="brand-text font-weight-light"></span>
-                </a>
-
-                <button class="navbar-toggler order-1" type="button" data-toggle="collapse"
-                        data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse order-3" id="navbarCollapse">
-                    <!-- Left navbar links -->
-                    <ul class="navbar-nav">
-
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Филиалы</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'warehouse_v2:mp-income' %}" class="nav-link">Реестр прихода</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Реестр расхода</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'warehouse_v2:items-list' %}" class="nav-link">Реестр лекарств</a>
-                        </li>
-
-                    </ul>
-
-                    <!-- SEARCH FORM -->
-                </div>
-                <!-- Right navbar links -->
-            </div>
-
-            <ul class="navbar-nav ml-auto">
-                <!-- Navbar Search -->
-                <li class="nav-item dropdown user-menu">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
-                        <img src="{% static 'adminlte3_assets/dist/img/user2-160x160.jpg' %}" class="user-image img-circle elevation-2"
-                             alt="User Image">
-                        <span class="d-none d-md-inline">Alexander Pierce</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                        <!-- User image -->
-                        <li class="user-header bg-primary">
-                            <img src="{% static 'adminlte3_assets/dist/img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
-
-                            <p>
-                                Alexander Pierce - Web Developer
-{#                                <small>Member since Nov. 2012</small>#}
-                            </p>
-                        </li>
-                        <!-- Menu Body -->
-{#                        <li class="user-body">#}
-{#                            <div class="row">#}
-{#                                <div class="col-4 text-center">#}
-{#                                    <a href="#">Followers</a>#}
-{#                                </div>#}
-{#                                <div class="col-4 text-center">#}
-{#                                    <a href="#">Sales</a>#}
-{#                                </div>#}
-{#                                <div class="col-4 text-center">#}
-{#                                    <a href="#">Friends</a>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                            <!-- /.row -->#}
-{#                        </li>#}
-                        <!-- Menu Footer-->
-                        <li class="user-footer">
-                            <a href="#" class="btn btn-default btn-flat"> Профил</a>
-                            <a href="#" class="btn btn-default btn-flat float-right">Выйти</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        {% include 'snippets/navbar.html' %}
         <!-- /.navbar -->
 
         <div class="content-wrapper">
