--- a/backend/apps/warehouse/templates/snippets/navbar_min.html
+++ b/backend/apps/warehouse/templates/snippets/navbar_min.html
@@ -25,6 +25,9 @@
                     <a href="#" class="nav-link">Реестр расхода</a>
                 </li>
                 <li class="nav-item">
+                    <a href="{% url 'warehouse_branch:transfers-list' %}" class="nav-link">Реестр перемещений</a>
+                </li>
+                <li class="nav-item">
                     <a href="{% url 'warehouse_v2:items-list' %}" class="nav-link">Реестр лекарств</a>
                 </li>
                 <li class="nav-item">
