--- a/backend/apps/warehouse/templates/branches/income_list.html
+++ b/backend/apps/warehouse/templates/branches/income_list.html
@@ -75,6 +75,7 @@
                                             <th>Пользователь</th>
                                             <th>Дата ввода</th>
                                             <th>Статус</th>
+                                            <th style="width: 10px"></th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -90,36 +91,32 @@
                                                 <td>{{ i.created_by.full_name }}</td>
                                                 <td>{{ i.modified_at }}</td>
                                                 {% if i.state == 'доставлено' %}
+                                                    <td>
+                                                        <i class="fas fa-edit"></i>
+                                                        </a>
+                                                    </td>
                                                     <td><span class="badge bg-success">{{ i.state }}</span></td>
                                                 {% elif i.state == 'в ожидании' %}
                                                     <td><span class="badge bg-warning">{{ i.state }}</span></td>
+                                                    <td>
+                                                        <a class="badge-pill"
+                                                           href="{% url 'warehouse_branch:income-update' i.pk %}">
+                                                            <i class="fas fa-edit"></i>
+                                                        </a>
+                                                    </td>
                                                 {% elif i.state == 'отказоно' %}
                                                     <td><span class="badge bg-danger">{{ i.state }}</span></td>
+                                                    <td>
+                                                        <i class="fas fa-edit"></i>
+                                                        </a>
+                                                    </td>
                                                 {% else %}
                                                     <td><span class="badge bg-black">{{ i.state }}</span></td>
+                                                    <td>
+                                                        <i class="fas fa-edit"></i>
+                                                        </a>
+                                                    </td>
                                                 {% endif %}
-
-{#                                                {% if i.state == 'в ожидании' %}#}
-{#                                                    <td><span class="badge bg-warning">{{ i.state }}</span></td>#}
-{#                                                    <td>#}
-{#                                                        <a class="badge-pill"#}
-{#                                                           href="{% url 'warehouse_v2:income-update' i.pk %}">#}
-{#                                                            <i class="fas fa-edit"></i>#}
-{#                                                        </a>#}
-{#                                                    </td>#}
-{#                                                {% elif i.state == 'принято' %}#}
-{#                                                    <td><span class="badge bg-success">{{ i.state }}</span></td>#}
-{#                                                    <td>#}
-{#                                                        <i class="fas fa-edit"></i>#}
-{#                                                        </a>#}
-{#                                                    </td>#}
-{#                                                {% elif i.state == 'отказоно' %}#}
-{#                                                    <td><span class="badge bg-danger">{{ i.state }}</span></td>#}
-{#                                                    <td>#}
-{#                                                        <i class="fas fa-edit"></i>#}
-{#                                                        </a>#}
-{#                                                    </td>#}
-{#                                                {% endif %}#}
 
                                             </tr>
                                         {% endfor %}
